--- a/app/src/main/res/layout/item_product_cart.xml
+++ b/app/src/main/res/layout/item_product_cart.xml
@@ -43,7 +43,7 @@
         android:layout_width="@dimen/product_cart_img_size"
         android:layout_height="@dimen/product_cart_img_size"
         android:background="@color/gray_100"
-        android:layout_marginStart="@dimen/common_padding_min"
+        android:layout_marginStart="@dimen/common_margin_min"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
