--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="common_margin_min">8dp</dimen>
+    <dimen name="common_margin_default">16dp</dimen>
     <dimen name="common_margin_medium">24dp</dimen>
+
+    <dimen name="common_padding_min">8dp</dimen>
+    <dimen name="common_padding_default">16dp</dimen>
 
     <dimen name="product_img_width">148dp</dimen>
     <dimen name="product_preview_cart_height">80dp</dimen>
     <dimen name="product_cart_img_size">48dp</dimen>
-    <dimen name="common_padding_min">8dp</dimen>
-    <dimen name="common_margin_default">16dp</dimen>
 
 </resources>
