--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -70,10 +70,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             tools:itemCount="5"
             tools:listitem="@layout/item_product_cart"
-            app:layout_constraintHeight_default="wrap"
+
+            app:layout_constrainedHeight="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tvTotal"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
