--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,6 @@
     <dimen name="product_img_width">148dp</dimen>
     <dimen name="product_preview_cart_height">80dp</dimen>
     <dimen name="product_cart_img_size">48dp</dimen>
+    <dimen name="track_margin_bottom_progress">14dp</dimen>
 
 </resources>
