--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,7 @@
     <dimen name="product_preview_cart_height">80dp</dimen>
     <dimen name="product_cart_img_size">48dp</dimen>
     <dimen name="track_margin_bottom_progress">14dp</dimen>
+    <dimen name="chat_guideline_end">48dp</dimen>
+    <dimen name="chat_stroke">1dp</dimen>
 
 </resources>
