--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorOnPrimary">@color/white</color>
-    <color name="colorOnSecundary">@color/indigo_800</color>
+    <color name="colorOnSecondary">@color/indigo_800</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
