--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,11 @@
     <color name="indigo_800">#283593</color>
 
     <color name="gray_100">#f5f5f5</color>
+
+    <color name="orange_500">#FF9800</color>
+    <color name="blue_google">#4285F4</color>
+    <color name="blue_facebook">#1877F2</color>
+    <color name="green_500">#4CAF50</color>
+
+    <color name="red_500">#F44336</color>
 </resources>
