--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,6 @@
     <dimen name="chat_guideline_end">48dp</dimen>
     <dimen name="chat_stroke">1dp</dimen>
     <dimen name="chat_margin_horizontal">64dp</dimen>
+    <dimen name="login_width_button">160dp</dimen>
 
 </resources>
