--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_sign_out"
-        android:title="Cerrar sesión"
+        android:title="@string/product_menu_sign_out"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_profile"
+        android:title="@string/product_menu_profile"
         app:showAsAction="never"/>
 
     <item
