--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,5 +15,6 @@
     <dimen name="chat_stroke">1dp</dimen>
     <dimen name="chat_margin_horizontal">64dp</dimen>
     <dimen name="login_width_button">160dp</dimen>
+    <dimen name="profile_width_textfield">260dp</dimen>
 
 </resources>
