Update profile picture from gallery

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,11 +16,12 @@
         android:layout_width="@dimen/login_width_button"
         android:layout_height="@dimen/login_width_button"
         android:background="?attr/selectableItemBackground"/>
-    <!--
-       <com.google.android.material.progressindicator.LinearProgressIndicator
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="@dimen/login_width_button"
            android:layout_height="wrap_content"
+           android:layout_marginTop="@dimen/common_margin_min"
            android:visibility="gone"
            tools:visibility="invisible"
            tools:progress="75"/>
@@ -31,8 +32,8 @@
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            tools:text="Subiendo... 75%"/>
-   -->
-       <com.google.android.material.textfield.TextInputLayout
+
+    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/profile_width_textfield"
            android:layout_height="wrap_content"
            android:hint="@string/hint_full_name"
