--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,6 +12,11 @@
         app:showAsAction="never"/>
 
     <item
+        android:id="@+id/action_settings"
+        android:title="@string/product_menu_settings"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/action_order_history"
         android:title=""
         android:icon="@drawable/ic_history"
